# auxeira-backend

./: .env  .env.example  .env.template  .eslintrc.js  .gitignore  .prettierrc  ACTIVITY_REWARDS_API.md  ACTIVITY_REWARDS_COMPLETE_WORKFLOW.md  ACTIVITY_REWARDS_IMPLEMENTATION.md  ACTIVITY_REWARDS_INTEGRATION_COMPLETE.md  ACTIVITY_REWARDS_SAFE_INTEGRATION.md  ADMIN_CREDENTIALS.md  ADMIN_DASHBOARD_DEPLOYMENT.md  ADMIN_DASHBOARD_FIXES.md  ADMIN_DASHBOARD_GUIDE.md  ADMIN_LOGIN_DEBUG.md  ADMIN_USER_GUIDE.md  AI_AGENT_CONFIGURATION.md  AI_AGENT_CONFIGURATION_FINAL.md  AI_CHATBOT_DATA_COLLECTION_PROMPT.md  AI_NUDGES_DEPLOYMENT_SUMMARY.md  AI_NUDGES_IMPLEMENTATION.md  API_ENDPOINTS_REFERENCE.md  AUTHENTICATION_ANALYSIS.md  AWS_DEPLOYMENT_GUIDE.md  BUG-ANALYSIS.md  CLOUDFRONT_CACHE_ISSUE.md  CLOUDFRONT_OPTIMIZED_SETUP.md  COACH_GINA_DEPLOYMENT.md  COACH_GINA_FINAL_SUMMARY.md  COACH_GINA_FIX.md  COACH_GINA_HEADERS_REMOVED.md  COACH_GINA_LIVE_DEPLOYMENT.md  COACH_GINA_V2_UPDATE.md  COACH_GINA_V3_IMPROVEMENTS.md  COMMIT_MESSAGE.txt  COMPLETE-REBUILD-FIX.md  COMPLETE_MIGRATION_SUMMARY.md  COMPREHENSIVE_METRICS_AUDIT.md  CONNECTION_TEST_RESULTS.md  (+180 more)
.serverless/: meta.json
auxeira-backend-mirror-20251007-085548.git/: config  packed-refs
auxeira-dashboard-build/: build-errors.txt  fix_jsx.py  index.html  package-lock.json  package.json  (+1 more)
smart-contracts/solana-program/programs/solana-program/: Cargo.toml
smart-contracts/solana-program/programs/solana-program/src/: lib.rs
solana-program/programs/sse-platform/: Cargo.toml
solana-program/programs/sse-platform/src/: lib.rs
(+595 files in other folders)
