[package]
name = "solana-program"
version = "0.1.0"
description = "Startup Success Engine Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]  # Add this line

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"



